<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/scroll_bar_margin"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/update_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/updateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/value_margin"
            android:textSize="@dimen/update_time_font_size"
            android:textColor="@color/update_time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/update_time_margin"
            android:text="@string/today_max"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/todayMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/value_margin"
            android:textSize="@dimen/value_font_size"
            android:textColor="@color/max_value" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/unit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/unit" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/title_margin"
            android:text="@string/today_ave"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/todayAve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/value_margin"
            android:textSize="@dimen/value_font_size" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/unit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/unit" />
        
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/section_margin"
            android:text="昨日の最高値"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/yesterdayMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/value_margin"
            android:textSize="@dimen/value_font_size"
            android:textColor="@color/old_max_value" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/unit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/unit" />
        -->
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/section_margin"
            android:text="@string/yesterday_ave"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/yesterdayAve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/value_margin"
            android:textSize="@dimen/value_font_size"
            android:textColor="@color/old_value" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/unit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/unit" />
    </LinearLayout>